# expense-tracker

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
static/: dashboard.js
