[project]
name = "expense-tracker"
version = "0.1.0"
description = "A Flask-based expense tracker application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg[binary]>=3.2.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]

[tool.uv]
package = false
